--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^11.7.1",
     "react-google-login": "^5.1.21",
     "react-google-maps": "^9.4.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.8.0",
     "react-lazy-load-image-component": "^1.5.3",
     "react-loader-spinner": "^3.1.14",
