--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CLIENT_ID=jfjffffaddfeettgydgdffv
-REACT_APP_KEY=aaddddawrfffvvvvssaa
 SKIP_PREFLIGHT_CHECK=true
 FAST_REFRESH=false
+React_App_HOST_LOCAL='http://localhost:5000/bniReactWeb/services'
+React_App_HOST_REMOTE='https://bharani.tech/services'
