env feature completed

--- a/.env
+++ b/.env
@@ -1,4 +1,15 @@
 SKIP_PREFLIGHT_CHECK=true
 FAST_REFRESH=false
-React_App_HOST_LOCAL='http://localhost:5000/bniReactWeb/services'
-React_App_HOST_REMOTE='https://bharani.tech/services'
+React_App_LOCALHOST='localhost:8080'
+React_App_LOCALHOST_BASE_URL='http://localhost:5000/awzy-cms/services'
+React_App_LOCALHOST_HOST_NAME='localhost'
+React_App_LOCALHOST_USER_NAME='root'
+React_App_LOCALHOST_PASSWORD=''
+React_App_LOCALHOST_DATABASE='awzy'
+
+React_App_PRODUCTION_HOST='bharani.tech'
+React_App_PRODUCTION_BASE_URL='https://bharani.tech/services'
+React_App_PRODUCTION_HOST_NAME='199.79.62.121'
+React_App_PRODUCTION_USER_NAME='bharatvz'
+React_App_PRODUCTION_PASSWORD='Bnisuccess@!123'
+React_App_PRODUCTION_DATABASE='bharatvz_BniReactWeb'
