--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -18,11 +18,11 @@ http{
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         }
-        location /bniReactWeb/services {
+        location /awzy-cms/services {
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Server $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass http://localhost:8080/bniReactWeb/services;
+            proxy_pass http://localhost:8080/awzy-cms/services;
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Content-Type' 'multipart/form-data';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
