react app renamed

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 SKIP_PREFLIGHT_CHECK=true
 FAST_REFRESH=false
-React_App_LOCALHOST='localhost:8080'
-React_App_LOCALHOST_BASE_URL='http://localhost:5000/awzy-cms/services'
-React_App_LOCALHOST_HOST_NAME='localhost'
-React_App_LOCALHOST_USER_NAME='root'
-React_App_LOCALHOST_PASSWORD=''
-React_App_LOCALHOST_DATABASE='awzy'
+REACT_APP_LOCALHOST='localhost:8080'
+REACT_APP_LOCALHOST_BASE_URL='http://localhost:5000/awzy-cms/services'
+REACT_APP_LOCALHOST_HOST_NAME='localhost'
+REACT_APP_LOCALHOST_USER_NAME='root'
+REACT_APP_LOCALHOST_PASSWORD=''
+REACT_APP_LOCALHOST_DATABASE='awzy'
 
-React_App_PRODUCTION_HOST='bharani.tech'
-React_App_PRODUCTION_BASE_URL='https://bharani.tech/services'
-React_App_PRODUCTION_HOST_NAME='199.79.62.121'
-React_App_PRODUCTION_USER_NAME='bharatvz'
-React_App_PRODUCTION_PASSWORD='Bnisuccess@!123'
-React_App_PRODUCTION_DATABASE='bharatvz_BniReactWeb'
+REACT_APP_PRODUCTION_HOST='bharani.tech'
+REACT_APP_PRODUCTION_BASE_URL='https://bharani.tech/services'
+REACT_APP_PRODUCTION_HOST_NAME='199.79.62.121'
+REACT_APP_PRODUCTION_USER_NAME='bharatvz'
+REACT_APP_PRODUCTION_PASSWORD='Bnisuccess@!123'
+REACT_APP_PRODUCTION_DATABASE='bharatvz_BniReactWeb'
