--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -7,6 +7,4 @@ deployment:
     - /bin/cp build/* -R $DEPLOYPATH
     - /bin/cp build/.env -R $DEPLOYPATH
     - /bin/cp build/.htaccess -R $DEPLOYPATH
-    # - /bin/cp ./.htaccess $DEPLOYPATH
-    # - /bin/cp ./services -r $DEPLOYPATH
-    # - /bin/cp ./.env $DEPLOYPATH
+    - /bin/cp build/services/application/.htaccess -R $DEPLOYPATH/services/application/
