--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,4 +4,4 @@ deployment:
     - export DEPLOYPATH=/home/bharatvz/public_html/
     - /bin/rm -Rf $DEPLOYPATH
     - /bin/mkdir $DEPLOYPATH
-    - /bin/cp build/*.* -R $DEPLOYPATH
+    - /bin/cp -R build $DEPLOYPATH
