--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,4 +5,4 @@ deployment:
     - /bin/rm -Rf $DEPLOYPATH
     - /bin/mkdir $DEPLOYPATH
     - /bin/cp build/* -R $DEPLOYPATH
-    - /bin/cp build/.* -R $DEPLOYPATH
+    - /bin/cp build/.htaccess -R $DEPLOYPATH
