--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-dropzone": "^11.7.1",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
