--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "eject": "react-scripts eject",
     "develop": "NODE_ENV=development PORT=5001 node server/server.js & react-scripts start",
     "install-awzy": "node awzy-cli/installAwzy.js",
-    "removeNodeModules": "rmdir /Q/S node_modules",
-    "prestart": "copyfiles ./.env ./services/application/config"
+    "removeNodeModules": "node awzy-cli/removeNodeModules.js",
+    "prestart": "node awzy-cli/preStart.js"
   },
   "proxy": "http://localhost:5001",
   "resolutions": {
