--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-select": "^5.3.0",
     "react-switch": "^5.0.1",
     "react-toastify": "^5.5.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "string.prototype.matchall": "^4.0.7"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
