--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "node-banner": "^1.4.0",
     "password-generator": "^2.3.2",
+    "pdf-viewer-reactjs": "^2.2.3",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "rc-tree": "^5.5.0",
@@ -70,18 +71,11 @@
       "node": true
     }
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
     "copyfiles": "^2.4.1",
