--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "rc-tree": "^5.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
+    "react-csv-downloader": "^2.9.1",
+    "react-donut-chart": "^1.3.3",
     "react-dropzone": "^11.7.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
@@ -35,8 +37,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^3.8.0",
     "react-lazy-load-image-component": "^1.5.3",
+    "react-linechart": "^1.1.12",
     "react-loader-spinner": "^3.1.14",
     "react-native": "^0.67.4",
+    "react-rangeslider": "^2.2.0",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
