--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rc-tree": "^5.5.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-typeahead": "^6.2.3",
     "react-csv-downloader": "^2.9.1",
     "react-donut-chart": "^1.3.3",
     "react-dropzone": "^11.7.1",
