--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "postbuild": "node awzy-cli/copyServices.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
